--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -7,3 +7,22 @@
 /*! purgecss end ignore */
 
 /*Custom Styles Here*/
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+body {
+    /* background-color: #FCEDBD; */
+}
+
+.font-oswald {
+    font-family: 'Oswald', sans-serif;
+    font-size: 40px;
+}
+
+.logo-circle {
+    transform: scale(1.5);
+}
+
+.gold-color {
+    /* background:linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C); */
+    color: #fef08a !important;
+}
