--- a/app/(website)/author/[slug]/style.css
+++ b/app/(website)/author/[slug]/style.css
@@ -18,14 +18,28 @@
 .author-img-wrap {
     flex: 1;
     margin-left: 20%;
-    margin-right: -10%;
+    margin-right: 5%;
+    width: 75%; /* Đặt chiều rộng tùy ý */
+    padding-bottom: 3/4*100%; /* Đặt tỷ lệ 4:3 (3/4 * 100%) */
+    position: relative;
+    overflow: hidden;
 }
 
 .author-img {
-    width: 60%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .author-content-wrap {
     flex: 1;
     margin-right: 20%;
+}
+
+.author_gold_true {
+    color: #fef08a !important;
+    text-shadow: 0 20px 50px #5c5c16;
 }
