--- a/app/(website)/author/[slug]/style.css
+++ b/app/(website)/author/[slug]/style.css
@@ -47,9 +47,37 @@
 /* MOBILE */
 @media screen and (max-width: 576px) {
     .author-img-wrap {
-        margin-left: 5%;
+        display: none;
     }
     .author-content-wrap {
+        margin-right: 0;
+    }
+    .author-header-wrap {
+        display: flex;
         margin-right: 5%;
     }
+    .author-header-img-wrap {
+        flex: 2;
+        margin-left: 5%;
+        margin-right: 5%;
+        width: 100%; /* Đặt chiều rộng tùy ý */
+        padding-bottom: 3/4*100%; 
+        position: relative;
+        overflow: hidden;
+    }
+    .author-header-img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .author-header-text {
+        flex: 1;
+    }
+    .author_bio {
+        margin: 5%;
+    }
+
 }
